--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="text-center tm-site-header"
         style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
         <img src="img/catgun.png" alt="Logo" style="max-width: 100%; height: auto;">
-        <img src="img/logo.png" alt="xx" style="position:absolute; top: 200px; right: 860px; height: 200px">
+        <img src="img/logo.png" alt="xx" style="position:static; top: 200px; right: 860px; height: 200px">
 
 
         <div style="display: flex; justify-content: center; gap: 20px;">
@@ -46,13 +46,6 @@
 
     </div>
     </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <div style="text-align:center">
         <h1>CONTRACT ADDRESS :<br>
