--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         <img src="img/logo.png" alt="xx" style="position:static; top: 200px; right: 860px; height: 200px">
 
 
-        <div style="display: flex; justify-content: center; gap: 20px;">
-            <a href="https://app.uniswap.org/swap" class="my-button"
-                style="position:fixed; margin-right: 1400px; margin-top: 100px; transform: rotate(0deg);">BUY NOW</a>
-        </div>
-        <div style="display: flex; justify-content: left; gap: 20px;">
-            <a href="https://dexscreener.com/" class="my-button1"
-                style="position:absolute; margin-left: 570px; margin-top: 100px; transform: rotate(0deg);">CHART</a>
-
-        </div>
     </header>
 
+    <div style="display: flex; justify-content: center; gap: 20px;">
+        <a href="https://app.uniswap.org/swap" class="my-button"
+            style="position:static; margin-right: 1400px; margin-top: -100px; transform: rotate(0deg);">BUY NOW</a>
     </div>
+    <div style="display: flex; justify-content: center; gap: 20px;">
+        <a href="https://dexscreener.com/" class="my-button1"
+            style="position:static; margin-left: 1550px; margin-top: -100px; transform: rotate(0deg);">CHART</a>
+
     </div>
+
+
     <br>
-    <div style="text-align:center">
+    <div style="text-align:center;">
         <h1>CONTRACT ADDRESS :<br>
             <h2>0x..</h2>
         </h1>
@@ -76,7 +76,7 @@
         </div>
         <div class="text-center social-icons">
             <div
-                style="display: flex; justify-content: left; gap: 20px; position:fixed; top: 200px; right: 200px; transform: rotate(0deg)">
+                style="display: flex; justify-content: left; gap: 20px; position:absolute; top: 200px; right: 200px; transform: rotate(0deg)">
                 TELEGRAM</a>
                 <a href="https://t.me/pinguonavax" class="telegram">
                     <i class="fab fa-telegram-plane fa-2x"></i>
