--- a/index.html
+++ b/index.html
@@ -5,87 +5,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
     <title>Pingu</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
-
     <style>
         body {
-
             background-image: url('https://image.noelshack.com/fichiers/2024/11/2/1710262736-bg.png');
-
             background-size: cover;
+        }
 
-            background-position: absolute;
+        .social-icons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            position: absolute;
+            top: 200px;
+        }
 
+        .social-icons.twitter {
+            left: 240px;
+        }
 
+        .social-icons.telegram {
+            right: 200px;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .tm-site-header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
         }
     </style>
 </head>
 
 <body>
-    <header class="text-center tm-site-header"
-        style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
+    <header class="text-center tm-site-header">
         <img src="img/catgun.png" alt="Logo" style="max-width: 100%; height: auto;">
-        <img src="img/logo.png" alt="xx" style="position:static; top: 200px; right: 860px; height: 200px">
-
-
+        <img src="img/logo.png" alt="Logo Pingu" style="height: 200px;">
     </header>
 
-    <div style="display: flex; justify-content: center; gap: 20px;">
-        <a href="https://app.uniswap.org/swap" class="my-button"
-            style="position:static; margin-right: 1400px; margin-top: -100px; transform: rotate(0deg);">BUY NOW</a>
-    </div>
-    <div style="display: flex; justify-content: center; gap: 20px;">
-        <a href="https://dexscreener.com/" class="my-button1"
-            style="position:static; margin-left: 1550px; margin-top: -100px; transform: rotate(0deg);">CHART</a>
-
+    <div class="text-center">
+        <a href="https://app.uniswap.org/swap" class="my-button">BUY NOW</a>
+        <a href="https://dexscreener.com/" class="my-button1">CHART</a>
     </div>
 
-
-    <br>
-    <div style="text-align:center;">
-        <h1>CONTRACT ADDRESS :<br>
-            <h2>0x..</h2>
-        </h1>
+    <div class="text-center">
+        <h1>CONTRACT ADDRESS :</h1>
+        <h2>0x..</h2>
         <h3>Supply : 1,000,000 $PINGU</h3>
-    </div>
-    <div style="text-align:center">
         <h3>NO TEAM ALLOCATION</h3>
-    </div>
-    <div style="text-align:center">
         <h3>LP BURN</h3>
-    </div>
-    <div style="text-align:center">
         <h3>NO TAXES</h3>
     </div>
+
+    <div class="social-icons twitter">
+        TWITTER
+        <a href="https://twitter.com/pinguonavax" class="twitter">
+            <i class="fab fa-twitter fa-2x"></i>
+        </a>
     </div>
-    </div>
+    <div class="social-icons telegram">
+        TELEGRAM
+        <a href="https://t.me/pinguonavax" class="telegram">
+            <i class="fab fa-telegram-plane fa-2x"></i>
+        </a>
     </div>
 
-    <div class="text-center social-icons">
-        <div
-            style="display: flex; justify-content: left; gap: 20px; position:absolute; top: 200px; left: 240px; transform: rotate(0deg)">
-            TWITTER</a>
-            <a href="https://twitter.com/pinguonavax" class="twitter">
-                <i class="fab fa-twitter fa-2x"></i>
-            </a>
-        </div>
-        <div class="text-center social-icons">
-            <div
-                style="display: flex; justify-content: left; gap: 20px; position:absolute; top: 200px; right: 200px; transform: rotate(0deg)">
-                TELEGRAM</a>
-                <a href="https://t.me/pinguonavax" class="telegram">
-                    <i class="fab fa-telegram-plane fa-2x"></i>
-                </a>
-            </div>
-
-            <script src="js/jquery.min.js"></script>
-            <script src="js/templatemo-script.js"></script>
-
+    <script src="js/jquery.min.js"></script>
+    <script src="js/templatemo-script.js"></script>
 </body>
 
 </html>
