--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         body {
             background-image: url('https://image.noelshack.com/fichiers/2024/11/3/1710350467-bg.png');
             background-size: cover;
+            position: absolute;
         }
 
         .social-icons {
