--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
 </head>
 
 <body>
+<body>
     <header class="text-center tm-site-header">
         <img src="img/catgun.png" alt="Logo" style="max-width: 100%; height: auto;">
         <img src="img/logo.png" alt="Logo Pingu" style="height: 200px;">
+        <img src="img/look.png" alt="xx" style="position:absolute; top: 500px; left:200px; height: 200px">
+        <img src="img/who.png" alt="xx" style="position:absolute; top: 500px; right: 200px; height: 200px">
     </header>
 
     <div class="text-center">
